Bug Fix for Round Number
Round Number sometimes was too small and couldnt see the number in On Deck

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -552,6 +552,7 @@ input[type="text"] {
 #roundNumber, #onDeckRoundNumber {
   text-align: center;
   margin-right: 4px;
+  min-width: 20px;
   width: 15%;
   display: none;
 }
